--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.10.1",
     "sass": "^1.63.6",
     "scss": "^0.2.4"
   },
