--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^4.29.23",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
@@ -26,6 +27,7 @@
     "scss": "^0.2.4"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
