--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "react-icons": "^4.10.1",
     "react-infinite-scroll-component": "^6.1.0",
     "sass": "^1.63.6",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "simple-zustand-devtools": "^1.1.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
+    "@types/node": "^20.4.8",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
